ViaGo_yaml/Viago_vpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "ViaGo pure VPC base infrastructure for Seoul and Sao Paulo regions"

Parameters:
  ProjectName:
    Description: "Project/service name prefix"
    Type: String
    Default: viago

  RegionName:
    Description: "Logical region name used in resource tags and export names"
    Type: String
    AllowedValues:
      - seoul
      - saopaulo

  PublicKeyMaterial:
    Description: "Public key material for EC2 KeyPair creation"
    Type: String
    NoEcho: true




Mappings:
  CidrMap:
    ap-northeast-2:
      VpcCidr: 172.16.0.0/16
      PubSn1Cidr: 172.16.1.0/24
      PubSn2Cidr: 172.16.2.0/24
      WebSn3Cidr: 172.16.3.0/24
      WebSn4Cidr: 172.16.4.0/24
      DbSn5Cidr: 172.16.5.0/24
      DbSn6Cidr: 172.16.6.0/24
    sa-east-1:
      VpcCidr: 172.17.0.0/16
      PubSn1Cidr: 172.17.1.0/24
      PubSn2Cidr: 172.17.2.0/24
      WebSn3Cidr: 172.17.3.0/24
      WebSn4Cidr: 172.17.4.0/24

Conditions:
  IsSeoul: !Equals [!Ref "AWS::Region", ap-northeast-2]

Resources:
  # ------------------------------------------------------------
  # VPC & Internet Gateway
  # ------------------------------------------------------------
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", VpcCidr]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-vpc"

  Igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-igw"

  IgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref Igw
      VpcId: !Ref Vpc

  # ------------------------------------------------------------
  # Public Subnets
  # ------------------------------------------------------------
  PubSn1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn1Cidr]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-pub-sn1"

  PubSn2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs ""]
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-pub-sn2"

  PubRt12:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-pub-rt12"

  PubRt12Sn1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRt12
      SubnetId: !Ref PubSn1

  PubRt12Sn2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRt12
      SubnetId: !Ref PubSn2

  PubRt12DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: IgwAttachment
    Properties:
      RouteTableId: !Ref PubRt12
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref Igw

  # ------------------------------------------------------------
  # Web Private Subnets
  # ------------------------------------------------------------
  WebSn3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", WebSn3Cidr]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-web-sn3"

  WebSn4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs ""]
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", WebSn4Cidr]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-web-sn4"

  WebRt34:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-web-rt34"

  WebRt34Sn3Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRt34
      SubnetId: !Ref WebSn3

  WebRt34Sn4Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRt34
      SubnetId: !Ref WebSn4

  WebRt34DefaultRouteNatGateway:
    Type: AWS::EC2::Route
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref WebRt34
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  # ------------------------------------------------------------
  # DB Private Subnets - Seoul only
  # ------------------------------------------------------------
  DbSn5:
    Type: AWS::EC2::Subnet
    Condition: IsSeoul
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", DbSn5Cidr]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-db-sn5"

  DbSn6:
    Type: AWS::EC2::Subnet
    Condition: IsSeoul
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs ""]
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", DbSn6Cidr]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-db-sn6"

  DbRt56:
    Type: AWS::EC2::RouteTable
    Condition: IsSeoul
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-db-rt56"

  DbRt56Sn5Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsSeoul
    Properties:
      RouteTableId: !Ref DbRt56
      SubnetId: !Ref DbSn5

  DbRt56Sn6Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsSeoul
    Properties:
      RouteTableId: !Ref DbRt56
      SubnetId: !Ref DbSn6

  # ------------------------------------------------------------
  # NAT Gateway
  # ------------------------------------------------------------
  NatGatewayEip:
    Type: AWS::EC2::EIP
    DependsOn: IgwAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-eip-nat"

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEip.AllocationId
      SubnetId: !Ref PubSn1
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-nat-gw"

  # ------------------------------------------------------------
  # KeyPair
  # ------------------------------------------------------------
  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Sub "${RegionName}-key"
      PublicKeyMaterial: !Ref PublicKeyMaterial
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-key"

Outputs:
  VpcId:
    Description: "VPC ID"
    Value: !Ref Vpc
    Export:
      Name: !Sub "${ProjectName}-${RegionName}-VpcId"

  PublicSubnet1Id:
    Description: "Public Subnet 1 ID"
    Value: !Ref PubSn1
    Export:
      Name: !Sub "${ProjectName}-${RegionName}-PubSn1Id"

  PublicSubnet2Id:
    Description: "Public Subnet 2 ID"
    Value: !Ref PubSn2
    Export:
      Name: !Sub "${ProjectName}-${RegionName}-PubSn2Id"

  WebSubnet3Id:
    Description: "Web Private Subnet 1 ID"
    Value: !Ref WebSn3
    Export:
      Name: !Sub "${ProjectName}-${RegionName}-WebSn3Id"

  WebSubnet4Id:
    Description: "Web Private Subnet 2 ID"
    Value: !Ref WebSn4
    Export:
      Name: !Sub "${ProjectName}-${RegionName}-WebSn4Id"

  DbSubnet5Id:
    Condition: IsSeoul
    Description: "DB Private Subnet 1 ID"
    Value: !Ref DbSn5
    Export:
      Name: !Sub "${ProjectName}-${RegionName}-DbSn5Id"

  DbSubnet6Id:
    Condition: IsSeoul
    Description: "DB Private Subnet 2 ID"
    Value: !Ref DbSn6
    Export:
      Name: !Sub "${ProjectName}-${RegionName}-DbSn6Id"

  PublicRouteTableId:
    Description: "Public Route Table ID"
    Value: !Ref PubRt12
    Export:
      Name: !Sub "${ProjectName}-${RegionName}-PubRt12Id"

  WebRouteTableId:
    Description: "Web Route Table ID"
    Value: !Ref WebRt34
    Export:
      Name: !Sub "${ProjectName}-${RegionName}-WebRt34Id"

  DbRouteTableId:
    Condition: IsSeoul
    Description: "DB Route Table ID"
    Value: !Ref DbRt56
    Export:
      Name: !Sub "${ProjectName}-${RegionName}-DbRt56Id"
